Changed CSS of #leftbar to fix scrollbar bug. we can set both top and bottom positions.
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@4919 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/ui/demos/functional/css/demo.css
+++ b/ui/demos/functional/css/demo.css
@@ -86,23 +86,23 @@ h2, .menutitle {
 
 
 #leftbar {
-	position: absolute; 
-	top: 0; 
-	left: 0; 
+	position: absolute;
+	top: 0;
+    bottom:0px;
+	left: 0;
 	width: 198px;
-	height: 100%;
 	overflow: hidden;
 	border: 1px solid #ccc;
 }
 
 #maincontent {
-	position: fixed; 
+	position: fixed;
 	top: 0;
 	left: 200px;
 	right: 0px;
 	bottom: 0px;
-	overflow-x: hidden; 
-	overflow-y: auto; 
+	overflow-x: hidden;
+	overflow-y: auto;
 	background: #fff;
 }
 
@@ -116,6 +116,6 @@ h2, .menutitle {
 }
 
 * html #maincontent{ /*IE6 hack*/
-	height: 100%; 
-	width: 100%; 
+	height: 100%;
+	width: 100%;
 }
